Project

General

Profile

Actions

Bug #48527

closed

[rbd-mirror] failed to unlink skipped intermediate snapshots

Added by Jason Dillaman over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the 'rbd-mirror' daemon is falling behind, it can fail to unlink itself from any intermediate snapshots that it decides to skip over:

2020-12-09T21:40:43.798-0500 7f1359597700 10 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: 
2020-12-09T21:40:43.798-0500 7f1359597700 15 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: remote mirror snapshot: id=2397, mirror_ns=[mirror state=primary, complete=1, mirror_peer_uuids=94b2df87-aec9-4bba-b7e9-2561c537ab0c, primary_mirror_uuid=, primary_snap_id=head, last_copied_object_number=0, snap_seqs={}]
2020-12-09T21:40:43.798-0500 7f1359597700 15 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: skipping synced remote snapshot 2397
2020-12-09T21:40:43.798-0500 7f1359597700 15 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: remote mirror snapshot: id=5175, mirror_ns=[mirror state=primary, complete=1, mirror_peer_uuids=94b2df87-aec9-4bba-b7e9-2561c537ab0c, primary_mirror_uuid=, primary_snap_id=head, last_copied_object_number=0, snap_seqs={}]
2020-12-09T21:40:43.798-0500 7f1359597700 15 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: remote mirror snapshot: id=5176, mirror_ns=[mirror state=primary, complete=1, mirror_peer_uuids=94b2df87-aec9-4bba-b7e9-2561c537ab0c, primary_mirror_uuid=, primary_snap_id=head, last_copied_object_number=0, snap_seqs={}]
2020-12-09T21:40:43.798-0500 7f1359597700 10 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 scan_remote_mirror_snapshots: unlinking from remote snapshot 5176
2020-12-09T21:40:43.798-0500 7f1359597700 10 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 unlink_peer: remote_snap_id=5176
2020-12-09T21:40:43.849-0500 7f1352d8a700 10 rbd::mirror::image_replayer::snapshot::Replayer: 0x5651c7f0d800 handle_unlink_peer: r=0

This results in the most up-to-date snapshot getting unlinked improperly which leaves a mirrored snapshot with an empty set of peers. This results in several other bugs.

Actions #1

Updated by Jason Dillaman over 3 years ago

  • Backport deleted (octopus)
  • Pull request ID set to 38517

(backport will occur under #48525)

Actions #2

Updated by Jason Dillaman over 3 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Jason Dillaman over 3 years ago

  • Backport set to octopus
Actions #5

Updated by Jason Dillaman over 3 years ago

  • Backport deleted (octopus)
Actions #6

Updated by Jason Dillaman over 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF