rbd-mirror: do not attempt to unlink from more recent snapshots

The snapshot-based mirroring replayer should only attempt to unlink
from any snapshots that are older than the end remote snapshot id to
prevent the remote side from incorrectly deleted the snapshot.

Fixes: https://tracker.ceph.com/issues/48527
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 78f8abce2d90d7c9bcf7b4bd4d805c3fe0b39b03)